# G-ING-900-PAR-9-1-legacy-13

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  README.md  babel.cfg  compose.yaml  geneweb-cli.py  pytest.ini  requirements.txt  start-geneweb.sh  test_export.json  test_tree.html
cli/: main.py
core/: __init__.py  database.py  models.py
geneweb-python/: PORTING_STATUS.md  QUICKSTART.md  README.md  pyproject.toml
geneweb-python/geneweb_python/: __init__.py
geneweb-python/geneweb_python/app/: check.py  cli.py  ged2gwb.py  gwb2ged.py  gwc.py  gwd.py  gwdiff.py  gwexport.py  gwu.py
geneweb-python/tests/: test_check.py  test_ged2gwb.py  test_gwb2ged.py  test_gwd.py  test_gwdiff.py  test_gwexport.py  test_gwu.py
geneweb_py/: __init__.py  config.py  consanguinity.py  cousins.py  fs.py  gedcom_adapter.py  models.py  plugins.py  relationship.py  search.py  sosa.py  storage.py  templating.py
geneweb_py/web/: __init__.py  app.py
hd/etc/: base.html  choose_base.html  create_family.html  create_person.html  edit_family.html  edit_note.html  edit_person.html  families_list.html  family.html  note_view.html  person.html  (+4 more)
locales/: messages.pot
scripts/: example_relationships.py  import_gedcom.py
static/: style.css
tests/: conftest.py  test_cdate_parsing.py  test_config.py  test_consanguinity.py  test_consanguinity_more.py  test_cousins.py  test_database.py  test_db_selection.py  test_events.py  test_fs.py  test_gedcom_adapter.py  test_models.py  test_plugins.py  test_relationship_graph.py  test_search.py  test_sosa.py  test_storage.py  test_web_app.py
(+16 files in other folders)
